Fixed overlapping text

--- a/Lab2/styles.css
+++ b/Lab2/styles.css
@@ -1,9 +1,15 @@
 textarea{
-    width: 200px;
-    height: 50px;
+    width: 600px;
+    height: 15px;
     resize: none;
+    overflow: visible;
 }
 
 canvas{
     border:1px solid #000000;
+}
+
+body{
+    width: 50%;
+    margin: 0 auto;
 }
